src/styles/_component.social-links.scss
@use 'mixins';

.social-links {
  $bp-links-go-inline: 29rem;

  margin-top: 3rem;
  margin-bottom: 8rem;

  @media (min-width: $bp-col-4-to-12) {
    @include mixins.twelve-col-grid;

    margin-top: 12rem;
  }

  &__left {
    display: none;

    @media (min-width: $bp-col-4-to-12) {
      @include mixins.holographic-border($border-size: 2px);

      border-radius: $border-radius-top;
      display: block;
      grid-column: 1 / span 4;
      margin-top: -2rem;

      img {
        display: block;
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: $border-radius-top;
        position: relative;
        top: 2rem;
        left: 2rem;
      }
    }
  }

  &__right {
    grid-column: 5 / span 8;
  }

  &__links {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;

    @media (min-width: $bp-links-go-inline) {
      justify-content: space-around;
      align-items: flex-end;
    }
  }

  &__link {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: 1.5rem auto;
    justify-content: space-between;
    align-items: center;
    line-height: 1;
    text-align: center;

    @media (min-width: $bp-links-go-inline) {
      flex-direction: row;
      text-align: left;
      justify-content: flex-end;
      margin-bottom: 0;
    }

    @media (min-width: $bp-col-4-to-12) {
      margin: 0;
    }

    div {
      margin-top: 1.5rem;
      font-size: 1.25rem;
      font-family: $font-accent;

      @media (min-width: $bp-links-go-inline) {
        margin-top: 0;
        margin-left: 1.5rem;
        width: 100%;
        min-width: 20rem;
      }

      @media (min-width: $bp-col-4-to-12) {
        width: 70%;
        font-size: 2rem;
      }
    }

    svg,
    .sparkbox-svg {
      fill: $color-silvered;
      max-width: 15rem;
      transition: all 340ms ease;
      width: 100%;

      @media (min-width: $bp-links-go-inline) {
        max-width: 6.5rem;
      }
    }

    &:hover,
    &:active {
      color: $color-text-accent;
      text-decoration: none;

      svg,
      .sparkbox-svg {
        fill: url("#holo-gradient");
        transform: translateY(-0.25rem);
      }
    }
  }
}

